feat: added framework(xros simulator)

--- a/ios/binary/LiveTranslationSDK_iOS.xcframework/Info.plist
+++ b/ios/binary/LiveTranslationSDK_iOS.xcframework/Info.plist
@@ -49,6 +49,23 @@
 			<key>SupportedPlatform</key>
 			<string>xros</string>
 		</dict>
+		<dict>
+			<key>BinaryPath</key>
+			<string>LiveTranslationSDK_iOS.framework/LiveTranslationSDK_iOS</string>
+			<key>LibraryIdentifier</key>
+			<string>xros-arm64_x86_64-simulator</string>
+			<key>LibraryPath</key>
+			<string>LiveTranslationSDK_iOS.framework</string>
+			<key>SupportedArchitectures</key>
+			<array>
+				<string>arm64</string>
+				<string>x86_64</string>
+			</array>
+			<key>SupportedPlatform</key>
+			<string>xros</string>
+			<key>SupportedPlatformVariant</key>
+			<string>simulator</string>
+		</dict>
 	</array>
 	<key>CFBundlePackageType</key>
 	<string>XFWK</string>
